--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">OuiProject</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Paramètres</string>
+    <string name="refresh">Rafraichir</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
