--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="card_infos_title">Infos application</string>
+    <string name="api_URL">Lien : https://api.idbus.com/</string>
+    <string name="infos_subhead">API Ouibus</string>
+    <string name="infos_description">Ouibus is a subsidiary of SNCF wich operates coach services in Europe. This API is free to use. \nThis API provides a list of Ouibus stops and usefull informations.</string>
+    <string name="lib_title">Libraries</string>
+    <string name="lib_content">
+        SDK Version : 24 \nGSON : serialization/deserialization library \nVolley : HTTP library \n
+    </string>
 </resources>
